 . Particles: added support for endSize and endSizeVar (issue #241)
 . Particles: added support for start/end/var spinning (issue #335)
 . Particles: support for World/Local coordinates (issue #241)
 . Texture2D: new alias/antialias API (issue #226)
 . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (issue #356)
 . Touches: new feature (issue #211)

version 0.7.2 - 23-Apr-2009
 . All: removed chipmunk macros. using CG macros (issue #290)
 . Actions: Added TintTo and TintBy (issue #204)
 . AtlasSprite: don't overwrite index 0 (issue #283)
 . AtlasSprite: Supports Z-order (issue #275)
 . AtlasSprite & Sprite: don't auto center sprite when setting frame (issue #281)
 . AtlasSprite: don't render in subpixels (issue #135)
 . AtlasSpriteManager: supports transformations (issue #308)
 . AtlasSpriteManager: fixes in removeChild (issue #296)
 . AtlasSpriteManager: works with capacity=1 (issue #305)
 . CocosNode: CocosNodeExtras merged into CocosNode (issue #292)
 . CocosNode: improved runAction/stopAction (issue #300)
 . CocosNode: possible memory leak when running actions (issue #298)
 . CocosNode: dont execute an already running action (issue #299)
 . CocosNode: children referring to deallocated parent (issue #297)
 . CocosNode: fixed "already scheduled exception" (issue #251)
 . CocosNode: don't render in subpixels (issue #135)
 . Demos: AtlasSprite with z-order (issue #275)
 . Demos: ParticleDemo uses touches to move the center of the emitter (issue #138)
 . Demos: organized tests folder (issue #280)
 . Demos: Atlas and Sprites uses TintBy and TintTo (issue #204)
 . Demos: Menu shows how to use padding / dynamic toggle items (part of issue #249, issue #224)
 . Demos: added drawing primitives excample (part of issue #322)
 . Director: Attach uses 'bounds' not 'frame' (issue #233)
 . Director: runWithScene / end doesn't crash/leak anymore (issue #325)
 . Director / Transitions: pushScene with Transitions works (issue #267)